# Evolution-Simulator

./: .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt  README.md  build.ninja  cmake_install.cmake  qtcsettings.cmake  results100.txt  results100_1.txt
.cmake/api/v1/reply/: cmakeFiles-v1-3ad5ced293096f073450.json  cmakeFiles-v1-e089b78f9b1a0bb8bdbc.json  codemodel-v2-abe255562841da1eb95a.json  codemodel-v2-dfb236076e384797c24b.json  directory-.-Debug-b22869ca7731c71b396e.json  directory-.-Debug-cd8c1631b9faba655575.json  index-2022-11-21T17-34-06-0580.json  target-Evolution_Simulator-Debug-6f5cea8aeec49c123bb5.json
.cmake/api/v1/reply.prev/: cache-v2-fcf4a287511e5d3e5d39.json  index-2022-11-21T17-01-39-0730.json  target-Evolution_Simulator-Debug-d9b4cb4460e4a0f02f4e.json  target-Evolution_Simulator_autogen-Debug-e93507787cdce7d92404.json  target-Evolution_Simulator_autogen_timestamp_deps-Debug-d4f25ad1693532e14086.json
.qt/: QtDeploySupport.cmake
Backend/Evolution/: classes.pro  classes.pro.user.e7a2071  classes.pro.user.ecc332e  common.cpp  common.hpp  creature.cpp  creature.hpp  environment.cpp  environment.h  environment.hpp  evolution.pro  food.hpp  living_being.cpp  living_being.hpp  main.cpp  network.cpp  plant.hpp
Backend/Evolution/Neural Network/: network.hpp
Backend/Neural Network/: edge.cpp  edge.hpp  layer.hpp  network.hpp  neuron.cpp
Backend/build-classes-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
Backend/build-classes-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/.qtc_clangd/.cache/clangd/index/: Coordinate.hpp.DA2BEA426D12533A.idx  Food.hpp.2233DA29A63CF2F7.idx  aa.hpp.5B71BBAF86F3E26B.idx  common.cpp.0A1BC5EC5AE7C259.idx  common.cpp.CF82292B9595733E.idx  common.hpp.C7BEE1B1CF4742AD.idx  common.hpp.FD9015F19450E0C8.idx  comon.cpp.6E5FF7F1CFE86951.idx  comon.hpp.694BA4A487E29B64.idx  coord.hpp.B247A194B86B2E9A.idx  coordinate.cpp.9EE70B93D8A9DEB2.idx  coordinate.hpp.E2063DB1E5465CE1.idx  creature.cpp.3902B08AE7EFBF73.idx  creature.cpp.D33B34DD456EE1CE.idx  creature.hpp.9596990AAFA0DE5E.idx  creature.hpp.CCA9AEF8D1F85C1F.idx  food.cpp.BF2737848DD4FE56.idx  food.hpp.1EC5069CE88C89AC.idx  food.hpp.A2BAD2B473ABBFA2.idx  living_being.cpp.0617E7556082A85D.idx  living_being.cpp.82F9E0D249D6E64C.idx  living_being.hpp.33A8372657D0DE3E.idx  living_being.hpp.D04BAA58E4B5B68C.idx  main.cpp.71B6757DBA45D5C1.idx  main.cpp.AE99540BE3CB89CF.idx  plant.cpp.4F68AB9056440E26.idx  plant.cpp.F9CFEEA224D48E5C.idx  plant.hpp.047F9701907F82AC.idx  plant.hpp.6318CEDD780BD2FA.idx
Backend/build-classes-Desktop_arm_darwin_generic_mach_o_64bit-Debug/: Makefile
Backend/build-classes-Qt_6_2_4_for_macOS-Debug/: Makefile  grading
Backend/build-classes-Qt_6_2_4_for_macOS-Debug/.qtc_clangd/: compile_commands.json
Backend/build-classes-Qt_6_2_4_for_macOS-Debug/.qtc_clangd/.cache/clangd/index/: __stddef_max_align_t.h.815F2681FFBA98A0.idx  assert.h.2C9A92ED748C38F0.idx  cassert.EB836A91D874CF0F.idx  common.cpp.E67BA1A33E3596C3.idx  common.hpp.D1EE75974B2BD529.idx  creature.cpp.A30B4A30DE115ACD.idx  creature.hpp.CB679F5A13944927.idx  cstddef.8D00248702EE7194.idx  (+18 more)
Backend/build-classes-x86_darwin_generic_mach_o_64bit-Debug/: Makefile  grading
Backend/build-classes-x86_darwin_generic_mach_o_64bit-Debug/build-classes-x86_darwin_generic_mach_o_64bit-Debug/: Makefile
Backend/build-evolution-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
Evolution_1/: CMakeLists.txt  barrier.cpp  barrier.h  creature.cpp  creature.h  environment.cpp  environment.h  herb_win.cpp  herb_win.h  herb_win.ui  living_being.cpp  living_being.h  main.cpp  mainmenu.cpp  mainmenu.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  menu.cpp  menu.h  omni_win.cpp  omni_win.h  omni_win.ui  paintscene.cpp  paintscene.h  plant.cpp  plant.h  plant_win.cpp  plant_win.h  plant_win.ui  stats_window.cpp  stats_window.h
Evolution_1/Frontend/: CreatureDesigns.qrc  environment_stats.cpp  environment_stats.h  mainMenuResources.qrc  mouse.cpp  mouse.h  resources.h  startscreen.cpp  startscreen.h  startscreen.ui
Evolution_1/Frontend/Widgets/: SimulationSpeedSlider.cpp  creatureDisplay.cpp  environmentTimer.cpp  simulationView.cpp  simulationView.h  simulationViewWidgets.h  statView.cpp  statView.h
Evolution_1/Frontend/Windows/: creatureDisplay.cpp  creatureDisplay.h  mainMenu.cpp  mainMenu.h
Evolution_1/Frontend/startscreen/: propertyslider.cpp  propertyslider.h  propertyslider.ui
Evolution_1/Living_Beings/: barrier.cpp  barrier.h  creature.cpp  creature.h  creature_old.cpp  creature_simple.cpp  living_being.cpp  living_being.h  plant.cpp  plant.h  predator.cpp  predator.h  prey.cpp  prey.h
Evolution_1/Neural Network/: network.cpp  network.hpp  neuron.hpp
Evolution_1/Neural_Network/: edge.cpp  edge.hpp  layer.cpp  layer.hpp  network.cpp  network.hpp  network_graphs.py  neuron.cpp  neuron.hpp  nn_evolution.cpp  nn_evolution.hpp  reading.cpp  reading.hpp  test.cpp  test_graph.txt  utils.cpp  utils.hpp
Evolution_Simulator.app/Contents/: Info.plist
Evolution_Simulator.app/Contents/MacOS/: Evolution_Simulator
Evolution_Simulator_autogen/: deps
Evolution_Simulator_autogen/EWIEGA46WW/: moc_mainwindow.cpp.d
doc/: project_design.md
reports/: Anja_Matic.txt  Arjun_Bommadevara.txt  Arjun_Bommadevara_Week2.txt  Flavia_Grasso.txt  Garance_Perrot.txt  Laurentiu_Lazar.txt  Lorenzo_DeGiovanni.txt  Matei_Atodiresei.txt  Mathilde_Cros.txt  Natali_Gogishvili.txt  Oskar_Dabkowski.txt  Rosemeyer_Tita_Week2.txt  Tita_Rosemeyer.txt  Tita_Rosemeyer_Week3.txt  Tita_Rosemeyer_Week4.txt  Tita_Rosemeyer_Week5.txt  Tudor_Cardas.txt  VictorMihaila.txt  VictorMihaila_Week2.txt  Vincenzo_Politelli.rtf  Vincenzo_Politelli.txt
reports/Pablo_Bertaud-Velten/: Pablo_Bertaud-Velten.txt  Pablo_Bertaud-Velten_week_4  Pablo_Bertaud_Velten_Week 5
results/: 100_10_10_10_10_1000_10  100_10_10_5_5_1000_10  50_10_10_10_10_1000_10  analysis.py  results100_100tests.txt  results100_100tests_1.txt  results100_100tests_2.txt  results100_r5.txt  results100_r5_1.txt  results50.txt  results50_1.txt
(+12 files in other folders)
